[gd_scene load_steps=19 format=3 uid="uid://c4ditbj0i6sgt"]

[ext_resource type="Script" uid="uid://b6a8t6ogcsmqy" path="res://PhysicsTest/ramp_test.gd" id="1_d7dld"]
[ext_resource type="PhysicsMaterial" uid="uid://bhjlk0y1u7hg6" path="res://PhysicsTest/deer_feet_physmat.tres" id="2_c746f"]
[ext_resource type="Script" uid="uid://m410she5703r" path="res://PhysicsTest/ground.gd" id="3_3e0yg"]
[ext_resource type="PackedScene" uid="uid://cvaagkgc834hv" path="res://PhysicsTest/Canes.glb" id="3_s1l5i"]
[ext_resource type="Script" uid="uid://cq8tnxuq7c0ab" path="res://PhysicsTest/top_platform.gd" id="5_d7dld"]
[ext_resource type="PackedScene" uid="uid://bc8mts2tx04hn" path="res://PhysicsTest/Reindeer.glb" id="6_wl4wa"]
[ext_resource type="Script" uid="uid://ci5fibeb4q8ya" path="res://PhysicsTest/physical_ramp.gd" id="7_jure0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ld0ly"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_v3pkt"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d7dld"]
rough = true
bounce = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_oomsc"]
size = Vector3(1000, 10, 2000)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oomsc"]
frequency = 0.05

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vs8a8"]
noise = SubResource("FastNoiseLite_oomsc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ld0ly"]
albedo_texture = SubResource("NoiseTexture2D_vs8a8")
heightmap_enabled = true
heightmap_scale = 2.0
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
heightmap_texture = SubResource("NoiseTexture2D_vs8a8")

[sub_resource type="PlaneMesh" id="PlaneMesh_3kocc"]
material = SubResource("StandardMaterial3D_ld0ly")
size = Vector2(1000, 2000)

[sub_resource type="BoxShape3D" id="BoxShape3D_uyybt"]
size = Vector3(48, 10, 36)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3kocc"]
transparency = 4
albedo_color = Color(0.69411767, 0.88235295, 1, 0.23137255)
refraction_enabled = true
refraction_scale = 0.01

[sub_resource type="Curve3D" id="Curve3D_3kocc"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.029159546, 0.045352936, 0, 0.4748726, 0.3311596, 0, -0.4748726, -0.3311596, 0, -0.50343704, -0.62441254, 0, -14.636433, 25.136326, 0, 14.636433, -25.136326, 0, -23.654705, -52.72859),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="RampTest" type="Node3D"]
script = ExtResource("1_d7dld")

[node name="FarCam" type="Camera3D" parent="."]
transform = Transform3D(0.5135412, 0.1930226, -0.8360728, 0, 0.97437006, 0.22495104, 0.8580649, -0.11552163, 0.5003792, -28.024275, 37.351646, 27.18371)

[node name="NearCam" type="Camera3D" parent="."]
transform = Transform3D(0.21787071, 0.2195472, -0.95096344, 0, 0.97437006, 0.22495104, 0.97597766, -0.04901025, 0.21228668, 3.9757252, 35.351646, 35.18371)

[node name="IceCubeEmitter" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 36.199528, 33.378044)

[node name="IceCube" type="RigidBody3D" parent="IceCubeEmitter"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21360016, -1.794548, 0.03819275)
physics_material_override = ExtResource("2_c746f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IceCubeEmitter/IceCube"]
shape = SubResource("BoxShape3D_ld0ly")

[node name="MeshInstance3D" type="MeshInstance3D" parent="IceCubeEmitter/IceCube"]
mesh = SubResource("BoxMesh_v3pkt")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_d7dld")
script = ExtResource("3_3e0yg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, -478)
shape = SubResource("BoxShape3D_oomsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -481)
mesh = SubResource("PlaneMesh_3kocc")

[node name="Canes" parent="." instance=ExtResource("3_s1l5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.053, -0.01, 0.929)

[node name="TopPlatform" type="StaticBody3D" parent="Canes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.053, 0.01, -1.409)
collision_layer = 3
collision_mask = 3
script = ExtResource("5_d7dld")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Canes/TopPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 29, 52)
shape = SubResource("BoxShape3D_uyybt")

[node name="DeerEmitter" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 6.988857, 34.259937, 35.230007)

[node name="Reindeer" parent="." instance=ExtResource("6_wl4wa")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 6.8989406, 33.98067, 34.751442)
visible = false

[node name="PhysicalRamp" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 33.970608, 33.474567)
use_collision = true
collision_layer = 3
collision_mask = 3
polygon = PackedVector2Array(-14, 0, 14, 0, 23, -10, -23, -10)
mode = 2
path_node = NodePath("Path3D")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.1
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = false
path_u_distance = 1.0
path_joined = false
smooth_faces = true
material = SubResource("StandardMaterial3D_3kocc")
script = ExtResource("7_jure0")

[node name="Path3D" type="Path3D" parent="PhysicalRamp"]
curve = SubResource("Curve3D_3kocc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5252637, 0.8509395, 0, -0.8509395, 0.5252637, 0, 50.174084, 33.2016)

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = 186.0
offset_top = 34.0
offset_right = 226.0
offset_bottom = 74.0

[node name="IceCubeButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Emit Cube"

[node name="CameraOption" type="OptionButton" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LaunchCheckButton" type="CheckButton" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Launch"

[node name="FlightStats" type="Label" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="BoxContainer/IceCubeButton" to="." method="_on_ice_cube_button_pressed"]
[connection signal="item_selected" from="BoxContainer/CameraOption" to="." method="_on_camera_option_item_selected"]
[connection signal="toggled" from="BoxContainer/LaunchCheckButton" to="." method="_on_launch_check_button_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
